stage 6:Setup Page

--- a/content/blog/hello-world-copy.mdx
+++ b/content/blog/hello-world-copy.mdx
@@ -1,6 +1,6 @@
 ---
 title: Hello World
-description: This is our first blog post
+description: This is our first blog post. Really cool
 date: 2024-03-06
 published: true
 ---
